<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.texttechnologylab.slc</groupId>
    <artifactId>literature-corpus-pipeline</artifactId>
    <version>0.0.1</version>
    <name>literature-corpus-pipeline</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <typesystem.version>6a3e0729b4</typesystem.version>
        <uima.version>3.5.0</uima.version>
        <dkpro.core.version>2.4.0</dkpro.core.version>
    </properties>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>ukp-oss-model-releases</id>
            <url>https://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-model-releases-local</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                        --add-opens java.base/java.util=ALL-UNNAMED
                    </argLine>
                    <forkedProcessTimeoutInSeconds>0</forkedProcessTimeoutInSeconds>
                    <excludedGroups>integration, runnable</excludedGroups>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.2.5</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <test>Runner#testGerParCorFile, RunIntegrationTest</test>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.0</version>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>org.texttechnologylab.dependency.app.Run</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.dkpro.core</groupId>
                <artifactId>dkpro-core-asl</artifactId>
                <version>${dkpro.core.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.2</version>
        </dependency>

        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimaj-core</artifactId>
            <version>${uima.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimafit-core</artifactId>
            <version>${uima.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>ruta-core</artifactId>
            <version>3.4.1</version>
        </dependency>

        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.16.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.11.0</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.0.0-jre</version>
        </dependency>

        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-api-syntax-asl</artifactId>
        </dependency>
        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-api-segmentation-asl</artifactId>
        </dependency>
        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-api-metadata-asl</artifactId>
        </dependency>
        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-api-resources-asl</artifactId>
        </dependency>
        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-api-io-asl</artifactId>
        </dependency>
        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-io-xmi-asl</artifactId>
        </dependency>
        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-io-tei-asl</artifactId>
        </dependency>


        <dependency>
            <groupId>org.texttechnologylab</groupId>
            <artifactId>DockerUnifiedUIMAInterface</artifactId>
            <version>1.3.1</version>
            <!--<exclusions>-->
            <!--    <exclusion>-->
            <!--        <groupId>com.github.texttechnologylab.textimager-uima</groupId>-->
            <!--        <artifactId>textimager-uima-types</artifactId>-->
            <!--    </exclusion>-->
            <!--</exclusions>-->
        </dependency>
        <dependency>
            <groupId>com.github.texttechnologylab</groupId>
            <artifactId>UIMATypeSystem</artifactId>
            <version>3.0.1</version>
            <!--<version>${typesystem.version}</version>-->
            <exclusions>
                <exclusion>
                    <groupId>com.github.texttechnologylab.textimager-uima</groupId>
                    <artifactId>textimager-uima-types</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>io.azam.ulidj</groupId>
            <artifactId>ulidj</artifactId>
            <version>1.0.4</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
    </dependencies>
</project>